# calculatorProgram-using-c

./: CMakeLists.txt  Demo.c  README.md  cMakeLists.txt  calculator.c  help.c  help.h  main.c
.github/workflows/: c-cpp.yml
